add philly data

--- a/pd-city-data.ipynb
+++ b/pd-city-data.ipynb
@@ -1384,6 +1384,279 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try a portion of Allentown from 2015 to 2023:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = requests.get(\n",
+    "    url = \"\thttps://www.ucr.pa.gov/NIBRS.CrimeAnalytics.Service/Silverlight/DataService/GetData/allblocks/Provider/query\",\n",
+    "    params = {\n",
+    "\t\t\t\"f\": \"json\",\n",
+    "\t\t\t\"where\": \"{\\\"offense\\\":\\\"'13A','13C','13B','35B','35A','26B','26A','26C','26D','26E','26F','26G','39A','39C','39B','39D','09C','09A','09B','64A','64B','23A','23B','23C','23D','23E','23F','23G','23H','40B','40A','40C','11D','36A','11A','11C','11B','36B','720','200','90A','510','220','250','90B','290','90C','90D','90E','270','210','90F','100','90G','240','90H','370','120','90I','280','90J','520','90Z'\\\",\\\"xmin\\\":-8403920.738603296,\\\"xmax\\\":-8399334.516906066,\\\"ymin\\\":4954009.008456112,\\\"ymax\\\":4954974.025938238,\\\"fromDate\\\":\\\"\\\\\\\"1/1/2015 \\\\\\\"\\\",\\\"toDate\\\":\\\"\\\\\\\" 5/31/2023\\\\\\\"\\\"}\",\n",
+    "\t\t\t\"returnGeometry\": \"true\",\n",
+    "\t\t\t\"spatialRel\": \"esriSpatialRelIntersects\",\n",
+    "\t\t\t\"outFields\": \"*\",\n",
+    "\t\t\t\"outSR\": \"3857\"\n",
+    "\t\t}\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Process it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>blockNumber</th>\n",
+       "      <th>geoId</th>\n",
+       "      <th>ucr</th>\n",
+       "      <th>offense</th>\n",
+       "      <th>reportedOn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-8.400500e+06</td>\n",
+       "      <td>4.954201e+06</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>420770005002017</td>\n",
+       "      <td>90Z</td>\n",
+       "      <td>All Other Offenses</td>\n",
+       "      <td>9/8/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-8.400262e+06</td>\n",
+       "      <td>4.954637e+06</td>\n",
+       "      <td>1035</td>\n",
+       "      <td>420770005001035</td>\n",
+       "      <td>35A</td>\n",
+       "      <td>Drug/Narcotic Violations</td>\n",
+       "      <td>8/19/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-8.402314e+06</td>\n",
+       "      <td>4.954178e+06</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>420770018002017</td>\n",
+       "      <td>35B</td>\n",
+       "      <td>Drug Equipment Violations</td>\n",
+       "      <td>7/15/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-8.402298e+06</td>\n",
+       "      <td>4.954130e+06</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>420770018002017</td>\n",
+       "      <td>35A</td>\n",
+       "      <td>Drug/Narcotic Violations</td>\n",
+       "      <td>7/15/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-8.403213e+06</td>\n",
+       "      <td>4.954444e+06</td>\n",
+       "      <td>3021</td>\n",
+       "      <td>420770019003021</td>\n",
+       "      <td>250</td>\n",
+       "      <td>Counterfeiting/Forgery</td>\n",
+       "      <td>12/10/2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-8.400122e+06</td>\n",
+       "      <td>4.954915e+06</td>\n",
+       "      <td>1014</td>\n",
+       "      <td>420770005001014</td>\n",
+       "      <td>35A</td>\n",
+       "      <td>Drug/Narcotic Violations</td>\n",
+       "      <td>11/16/2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-8.400866e+06</td>\n",
+       "      <td>4.954765e+06</td>\n",
+       "      <td>1012</td>\n",
+       "      <td>420770009001012</td>\n",
+       "      <td>35A</td>\n",
+       "      <td>Drug/Narcotic Violations</td>\n",
+       "      <td>9/20/2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-8.400225e+06</td>\n",
+       "      <td>4.954536e+06</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>420770005002011</td>\n",
+       "      <td>370</td>\n",
+       "      <td>Pornography/Obscene Material</td>\n",
+       "      <td>9/9/2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-8.401546e+06</td>\n",
+       "      <td>4.954055e+06</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>420770097001005</td>\n",
+       "      <td>90Z</td>\n",
+       "      <td>All Other Offenses</td>\n",
+       "      <td>6/30/2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-8.400417e+06</td>\n",
+       "      <td>4.954230e+06</td>\n",
+       "      <td>1054</td>\n",
+       "      <td>420770005001054</td>\n",
+       "      <td>90D</td>\n",
+       "      <td>Driving Under the Influence</td>\n",
+       "      <td>6/27/2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>-8.402552e+06</td>\n",
+       "      <td>4.954670e+06</td>\n",
+       "      <td>3026</td>\n",
+       "      <td>420770017003026</td>\n",
+       "      <td>35B</td>\n",
+       "      <td>Drug Equipment Violations</td>\n",
+       "      <td>6/17/2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>-8.402533e+06</td>\n",
+       "      <td>4.954620e+06</td>\n",
+       "      <td>3026</td>\n",
+       "      <td>420770017003026</td>\n",
+       "      <td>35A</td>\n",
+       "      <td>Drug/Narcotic Violations</td>\n",
+       "      <td>6/17/2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>-8.402919e+06</td>\n",
+       "      <td>4.954696e+06</td>\n",
+       "      <td>3009</td>\n",
+       "      <td>420770017003009</td>\n",
+       "      <td>370</td>\n",
+       "      <td>Pornography/Obscene Material</td>\n",
+       "      <td>4/21/2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>-8.403156e+06</td>\n",
+       "      <td>4.954832e+06</td>\n",
+       "      <td>3001</td>\n",
+       "      <td>420770019003001</td>\n",
+       "      <td>35A</td>\n",
+       "      <td>Drug/Narcotic Violations</td>\n",
+       "      <td>3/11/2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>-8.403726e+06</td>\n",
+       "      <td>4.954404e+06</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>420770019002007</td>\n",
+       "      <td>35A</td>\n",
+       "      <td>Drug/Narcotic Violations</td>\n",
+       "      <td>3/10/2021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               x             y blockNumber            geoId  ucr  \\\n",
+       "0  -8.400500e+06  4.954201e+06        2017  420770005002017  90Z   \n",
+       "1  -8.400262e+06  4.954637e+06        1035  420770005001035  35A   \n",
+       "2  -8.402314e+06  4.954178e+06        2017  420770018002017  35B   \n",
+       "3  -8.402298e+06  4.954130e+06        2017  420770018002017  35A   \n",
+       "4  -8.403213e+06  4.954444e+06        3021  420770019003021  250   \n",
+       "5  -8.400122e+06  4.954915e+06        1014  420770005001014  35A   \n",
+       "6  -8.400866e+06  4.954765e+06        1012  420770009001012  35A   \n",
+       "7  -8.400225e+06  4.954536e+06        2011  420770005002011  370   \n",
+       "8  -8.401546e+06  4.954055e+06        1005  420770097001005  90Z   \n",
+       "9  -8.400417e+06  4.954230e+06        1054  420770005001054  90D   \n",
+       "10 -8.402552e+06  4.954670e+06        3026  420770017003026  35B   \n",
+       "11 -8.402533e+06  4.954620e+06        3026  420770017003026  35A   \n",
+       "12 -8.402919e+06  4.954696e+06        3009  420770017003009  370   \n",
+       "13 -8.403156e+06  4.954832e+06        3001  420770019003001  35A   \n",
+       "14 -8.403726e+06  4.954404e+06        2007  420770019002007  35A   \n",
+       "\n",
+       "                         offense  reportedOn  \n",
+       "0             All Other Offenses    9/8/2022  \n",
+       "1       Drug/Narcotic Violations   8/19/2022  \n",
+       "2      Drug Equipment Violations   7/15/2022  \n",
+       "3       Drug/Narcotic Violations   7/15/2022  \n",
+       "4         Counterfeiting/Forgery  12/10/2021  \n",
+       "5       Drug/Narcotic Violations  11/16/2021  \n",
+       "6       Drug/Narcotic Violations   9/20/2021  \n",
+       "7   Pornography/Obscene Material    9/9/2021  \n",
+       "8             All Other Offenses   6/30/2021  \n",
+       "9    Driving Under the Influence   6/27/2021  \n",
+       "10     Drug Equipment Violations   6/17/2021  \n",
+       "11      Drug/Narcotic Violations   6/17/2021  \n",
+       "12  Pornography/Obscene Material   4/21/2021  \n",
+       "13      Drug/Narcotic Violations   3/11/2021  \n",
+       "14      Drug/Narcotic Violations   3/10/2021  "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "allentown_features = flatten_features(input = res.json()['features'])\n",
+    "# Transform to DataFrame:\n",
+    "allentown_subset = DataFrame.from_dict(allentown_features)\n",
+    "allentown_subset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1392,6 +1665,49 @@
     "# Bounding box for Allentown\n",
     "#40.5849952,-75.504076\n",
     "#40.6168179,-75.4673313"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using Selenium to Scrape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\CCallaghan\\AppData\\Local\\Temp\\ipykernel_23464\\3351862933.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Firefox(executable_path= r\"C:\\Users\\CCallaghan\\Downloads\\geckodriver-v0.33.0-win32\\geckodriver.exe\")\n"
+     ]
+    },
+    {
+     "ename": "SessionNotCreatedException",
+     "evalue": "Message: Expected browser binary location, but unable to find binary in default location, no 'moz:firefoxOptions.binary' capability provided, and no binary flag set on the command line\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mSessionNotCreatedException\u001b[0m                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mselenium\u001b[39;00m \u001b[39mimport\u001b[39;00m webdriver \n\u001b[1;32m----> 2\u001b[0m driver \u001b[39m=\u001b[39m webdriver\u001b[39m.\u001b[39;49mFirefox(executable_path\u001b[39m=\u001b[39;49m \u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mC:\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mUsers\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mCCallaghan\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mDownloads\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mgeckodriver-v0.33.0-win32\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mgeckodriver.exe\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[1;32mc:\\Users\\CCallaghan\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\firefox\\webdriver.py:201\u001b[0m, in \u001b[0;36mWebDriver.__init__\u001b[1;34m(self, firefox_profile, firefox_binary, capabilities, proxy, executable_path, options, service_log_path, service_args, service, desired_capabilities, log_path, keep_alive)\u001b[0m\n\u001b[0;32m    196\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mservice\u001b[39m.\u001b[39mstart()\n\u001b[0;32m    198\u001b[0m executor \u001b[39m=\u001b[39m FirefoxRemoteConnection(\n\u001b[0;32m    199\u001b[0m     remote_server_addr\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mservice\u001b[39m.\u001b[39mservice_url, ignore_proxy\u001b[39m=\u001b[39moptions\u001b[39m.\u001b[39m_ignore_local_proxy\n\u001b[0;32m    200\u001b[0m )\n\u001b[1;32m--> 201\u001b[0m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m\u001b[39m__init__\u001b[39;49m(command_executor\u001b[39m=\u001b[39;49mexecutor, options\u001b[39m=\u001b[39;49moptions, keep_alive\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[0;32m    203\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_is_remote \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\CCallaghan\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:286\u001b[0m, in \u001b[0;36mWebDriver.__init__\u001b[1;34m(self, command_executor, desired_capabilities, browser_profile, proxy, keep_alive, file_detector, options)\u001b[0m\n\u001b[0;32m    284\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_authenticator_id \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    285\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstart_client()\n\u001b[1;32m--> 286\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstart_session(capabilities, browser_profile)\n",
+      "File \u001b[1;32mc:\\Users\\CCallaghan\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:378\u001b[0m, in \u001b[0;36mWebDriver.start_session\u001b[1;34m(self, capabilities, browser_profile)\u001b[0m\n\u001b[0;32m    376\u001b[0m w3c_caps \u001b[39m=\u001b[39m _make_w3c_caps(capabilities)\n\u001b[0;32m    377\u001b[0m parameters \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mcapabilities\u001b[39m\u001b[39m\"\u001b[39m: w3c_caps}\n\u001b[1;32m--> 378\u001b[0m response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mexecute(Command\u001b[39m.\u001b[39;49mNEW_SESSION, parameters)\n\u001b[0;32m    379\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39msessionId\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m response:\n\u001b[0;32m    380\u001b[0m     response \u001b[39m=\u001b[39m response[\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "File \u001b[1;32mc:\\Users\\CCallaghan\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:440\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    438\u001b[0m response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcommand_executor\u001b[39m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    439\u001b[0m \u001b[39mif\u001b[39;00m response:\n\u001b[1;32m--> 440\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merror_handler\u001b[39m.\u001b[39;49mcheck_response(response)\n\u001b[0;32m    441\u001b[0m     response[\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_unwrap_value(response\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m))\n\u001b[0;32m    442\u001b[0m     \u001b[39mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32mc:\\Users\\CCallaghan\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:245\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    243\u001b[0m         alert_text \u001b[39m=\u001b[39m value[\u001b[39m\"\u001b[39m\u001b[39malert\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    244\u001b[0m     \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[39m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 245\u001b[0m \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[1;31mSessionNotCreatedException\u001b[0m: Message: Expected browser binary location, but unable to find binary in default location, no 'moz:firefoxOptions.binary' capability provided, and no binary flag set on the command line\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver \n",
+    "driver = webdriver.Firefox(executable_path= r\"C:\\Users\\CCallaghan\\Downloads\\geckodriver-v0.33.0-win32\\geckodriver.exe\")"
    ]
   }
  ],
