las cruces test

--- a/LMS/pulling-lms-data.ipynb
+++ b/LMS/pulling-lms-data.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
     "    - Format: Course discussions, learner uploads, live chat, social format, topics format, VTC conferencing\n",
     "    - Learning types: Asynchronous instructor-led, asynchronous self-paced, blended learning, synchronous virtual classroom\n",
     "    - Interface options: Leaning accessibility, ready-made themes\n",
-    "- Only 350 Learning is listed as capable of supporting \"learning accessibility\".\n",
+    "- Only 350 Learning is listed as capable of supporting \"learning accessibility\". Will this be an issue?\n",
     "\n",
     "Costs:\n",
     "\n",
